MYB-146 fixed myLinks layout problem, part of the fix is being moved to Sakai 3

--- a/dev/_css/sakai/sakai.core.2.css
+++ b/dev/_css/sakai/sakai.core.2.css
@@ -135,7 +135,7 @@
 .fl-widget .fl-widget-titlebar h2 {padding-left:3px}
 .fl-widget .fl-widget-titlebar {background: url(../../_images/block_tr.png) top right no-repeat; padding: 0 4px 0 0; width: auto;}
 .fl-widget .fl-widget-titlebar .widget-titlebar-inner {background: url(../../_images/block_tl.png) top left no-repeat; height: 47px}
-.fl-widget .fl-widget-titlebar .widget_title {color: #878a8c; font-size: 1.0em; float: left; padding-left: 43px; line-height: 50px}
+.fl-widget .fl-widget-titlebar .widget_title {color: #878a8c; font-size: 1.0em; float: left; padding-left: 43px; padding-top: 17px}
 .fl-widget .fl-widget-titlebar .settings {background-image: url(../../_images/edit_icon_widget.png); position: relative; height: 18px; background-repeat: no-repeat; margin-top: 15px}
 
 .hiddenwidget {border-bottom: 3px solid #D5DBDF;}
